Vista frontend de paises basica

--- a/Orders2024/Orders2024.Frontend/_Imports.razor
+++ b/Orders2024/Orders2024.Frontend/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Orders2024.Frontend
 @using Orders2024.Frontend.Layout
+
+@using Orders2024.Frontend.Repositories
+@using Orders2024.Shared.Entities
