--- a/Orders2024/Orders2024.Frontend/Pages/Countries/Index.razor
+++ b/Orders2024/Orders2024.Frontend/Pages/Countries/Index.razor
@@ -1,44 +1,32 @@
 ﻿@page "/countries/index"
 
-@inject IRepository repository
-
 <h3>Paises</h3>
-@if (Countries == null)
-{
-    <p>Cargando ...</p>
-}
-else
-{
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Pais</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var country in Countries!)
-            {
+
+<div mb-3>
+    <a class="btn btn-primary" href="/countries/create">Nuevo Pais</a>
+</div>
+
+<GenericList DataSource="Countries">
+    <Body>
+        <table class="table table-striped">
+            <thead>
                 <tr>
-                    <td>@country.Name</td>
-                    <td>
-                        <a class="btn btn-warning">Editar</a>
-                        <button class="btn btn-danger">Borrar</button>
-                    </td>
+                    <th>Pais</th>
+                    <th>Acciones</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-}
-
-
-@code {
-    public List<Country>? Countries { get; set; }
-
-    protected async override Task OnInitializedAsync()
-    {
-        await base.OnInitializedAsync();
-        var responseHttp = await repository.GetAsyn<List<Country>>("api/countries");
-        Countries = responseHttp.Response;
-    }
-}
+            </thead>
+            <tbody>
+                @foreach (var country in Countries!)
+                {
+                    <tr>
+                        <td>@country.Name</td>
+                        <td>
+                            <a class="btn btn-warning">Editar</a>
+                            <button class="btn btn-danger">Borrar</button>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </Body>
+</GenericList>
