--- a/Orders2024/Orders2024.Frontend/_Imports.razor
+++ b/Orders2024/Orders2024.Frontend/_Imports.razor
@@ -9,5 +9,7 @@
 @using Orders2024.Frontend
 @using Orders2024.Frontend.Layout
 
+@using Orders2024.Frontend._SharedComponents
 @using Orders2024.Frontend.Repositories
 @using Orders2024.Shared.Entities
+
